test-screenshots/output.txt
SyntaxError: /home/runner/work/vedichora-frontend/vedichora-frontend/e2e/screenshot.spec.js: Unexpected token, expected "," (50:73)

  48 |   // Remove the print() call so it doesn't block
  49 |   html = html.replace("setTimeout(() => { try { win.print() } catch {} }, 800)", "")
> 50 |   html = html.replace('onclick="window.print()"', 'onclick="console.log('print')"')
     |                                                                          ^
  51 |
  52 |   // Write to page
  53 |   await page.setContent(html, { waitUntil: 'domcontentloaded' })

   at screenshot.spec.js:50

  48 |   // Remove the print() call so it doesn't block
  49 |   html = html.replace("setTimeout(() => { try { win.print() } catch {} }, 800)", "")
> 50 |   html = html.replace('onclick="window.print()"', 'onclick="console.log('print')"')
     |                                                                         ^
  51 |
  52 |   // Write to page
  53 |   await page.setContent(html, { waitUntil: 'domcontentloaded' })
Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

